<resources>
    <string name="app_name">Leite Sobre Rodas</string>
    <string name="title_activity_maps">Leite Sobre Rodas</string>
    <string name="day">Segunda-Feira</string>
    <string name="btnSubmit">Login</string>
    <string name="edittext_password">CPF</string>
    <string name="logging_action">Conectando...</string>
    <string name="email">Nome</string>
    <string name="milkBttn">Tirar foto</string>
    <string name="launch_camera_stillshot">Launch Camera for stillshot</string>
    <string name="length_limit">Length Limit</string>
    <string name="zero_minutes">0 minutes</string>
    <string name="allow_retry">Allow Retry</string>
    <string name="auto_submit">Auto Submit</string>
    <string name="portrait_warning">Show Portrait Warning</string>
    <string name="default_front_facing">Default Front Facing</string>
    <string name="save_folder">Save Folder</string>
    <string name="camera_primary_color">Camera UI Color</string>
    <string name="demo_from_fragment">Demo from fragment</string>
    <string name="demo_from_activity">Demo from activity</string>
</resources>
