<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:id="@+id/logging_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.AppCompat"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/logging_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logging_action"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="@id/logging_bar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_content"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="128sp"
                android:layout_height="128sp"
                android:layout_marginLeft="128dp"
                android:layout_marginRight="128dp"
                android:layout_marginTop="108sp"
                android:layout_weight="1"
                android:id="@+id/logo"
                android:src="@mipmap/ic_launcher"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:id="@+id/appName"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/textcolor_edittext"
                android:paddingLeft="10dp"
                android:id="@+id/emailLabel"
                android:background="@drawable/rounded_edittext"
                android:textSize="14sp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/edittext_password"
                android:textColorHint="@color/textcolor_edittext"
                android:id="@+id/passwordLabel"
                android:background="@drawable/rounded_edittext"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSubmit"
                    android:id="@+id/submit"
                    android:theme="@style/Theme.AppCompat"
                    android:background="@drawable/rounded_login_button"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>